config/admission/vmimport_authz_vapb.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: vmimport-authz
  labels:
    app.kubernetes.io/name: virt-import
    app.kubernetes.io/managed-by: kustomize
    kubevirt.io: virt-import-vmimport-authz
spec:
  policyName: vmimport-authz
  validationActions:
  - Deny
